#6629 Verify the UI for a Toolbox with visible category names Fixes #6629

--- a/packages/survey-creator-core/src/components/toolbox/toolbox.scss
+++ b/packages/survey-creator-core/src/components/toolbox/toolbox.scss
@@ -162,6 +162,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-bottom: var(--ctr-toolbox-gap, var(--sjs-spacing-x05));
 }
 
 .svc-toolbox__category-separator {
@@ -205,24 +206,28 @@
 }
 
 .svc-toolbox__category-header-wrapper {
-  padding: var(--ctr-toolbox-group-header-margin-top, var(--sjs-spacing-x1)) var(--ctr-toolbox-group-header-margin-left, 0px)
-    var(--ctr-toolbox-group-header-margin-bottom, var(--sjs-spacing-x1)) var(--ctr-toolbox-group-header-margin-left, 0px);
-  margin-inline-start: calc(0px - var(--ctr-toolbox-group-padding-left, var(--sjs-spacing-x150)));
-  margin-inline-end: calc(0px - var(--ctr-toolbox-group-padding-right, var(--sjs-spacing-x150)));
+  padding: var(--ctr-toolbox-group-header-margin-top, 0px) var(--ctr-toolbox-group-header-margin-left, 0px)
+    var(--ctr-toolbox-group-header-margin-bottom, 0px) var(--ctr-toolbox-group-header-margin-left, 0px);
+  //margin-inline-start: calc(0px - var(--ctr-toolbox-group-padding-left, var(--sjs-spacing-x150)));
+  //margin-inline-end: calc(0px - var(--ctr-toolbox-group-padding-right, var(--sjs-spacing-x150)));
   align-self: stretch;
 }
 .svc-toolbox__category-header {
+  min-height: var(--ctr-toolbox-group-header-min-height, var(--sjs-spacing-x5));
   padding-top: var(--ctr-toolbox-group-header-padding-top, var(--sjs-spacing-x1));
   padding-inline-end: var(--ctr-toolbox-group-header-padding-right, var(--sjs-spacing-x1));
   padding-bottom: var(--ctr-toolbox-group-header-padding-bottom, var(--sjs-spacing-x1));
-  padding-inline-start: var(--ctr-toolbox-group-header-padding-left, var(--sjs-spacing-x3));
+  padding-inline-start: var(--ctr-toolbox-group-header-padding-left, var(--sjs-spacing-x2));
+
+  border-radius: var(--ctr-toolbox-group-header-corner-radius, var(--sjs-corner-radius-x1));
+  background: var(--ctr-toolbox-group-header-background-color, var(--sjs-layer-1-background-400, #f5f5f5ff));
 
   box-shadow:
     inset 0 var(--ctr-toolbox-group-header-border-width-top, 0px)
       var(--ctr-toolbox-group-header-border-color, var(--sjs-border-25, #d4d4d4ff)),
     inset calc(0px - var(--ctr-toolbox-group-header-border-width-right, 0px)) 0
       var(--ctr-toolbox-group-header-border-color, var(--sjs-border-25, #d4d4d4ff)),
-    inset 0 calc(0px - var(--ctr-toolbox-group-header-border-width-bottom, var(--sjs-stroke-x1)))
+    inset 0 calc(0px - var(--ctr-toolbox-group-header-border-width-bottom, 0px))
       var(--ctr-toolbox-group-header-border-color, var(--sjs-border-25, #d4d4d4ff)),
     inset var(--ctr-toolbox-group-header-border-width-left, 0px) 0
       var(--ctr-toolbox-group-header-border-color, var(--sjs-border-25, #d4d4d4ff));
@@ -232,6 +237,7 @@
   min-width: calcSize(20);
   position: relative;
   display: flex;
+  align-items: center;
 }
 
 .svc-toolbox__category-header--collapsed {
